add goole login

--- a/views/login.pug
+++ b/views/login.pug
@@ -9,3 +9,4 @@ block content
                 div.form-group
                     a.btn.btn-primary(href='/auth/facebook') Facebook
 
+                    a.btn.btn-primary(href='/auth/google') Google
