add github login

--- a/views/login.pug
+++ b/views/login.pug
@@ -10,3 +10,5 @@ block content
                     a.btn.btn-primary(href='/auth/facebook') Facebook
 
                     a.btn.btn-primary(href='/auth/google') Google
+
+                    a.btn.btn-primary(href='/auth/github') GitHub
